// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectsList > does not render ListHeaderComponent when empty 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-FlatList
    ListEmptyComponent={
      <EmptyState
        action={
          <Button
            accessibilityLabel="Add project"
            onPress={[MockFunction spy]}
            size="lg"
            testID="btn-new-project"
            variant="hero"
          >
            Add your first project
          </Button>
        }
        description="Create your first project so field notes and daily reports have a clear destination."
        icon={
          <lucide.HardHat
            color="#5f5b66"
            size={28}
          />
        }
        title="No projects yet"
      />
    }
    contentContainerStyle={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    data={[]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    refreshControl={
      <RN.RefreshControl
        onRefresh={[MockFunction spy]}
        refreshing={false}
      />
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    updateCellsBatchingPeriod={50}
  />
</rn-View>
`;

exports[`ProjectsList > matches snapshot when empty 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-FlatList
    ListEmptyComponent={
      <EmptyState
        action={
          <Button
            accessibilityLabel="Add project"
            onPress={[MockFunction spy]}
            size="lg"
            testID="btn-new-project"
            variant="hero"
          >
            Add your first project
          </Button>
        }
        description="Create your first project so field notes and daily reports have a clear destination."
        icon={
          <lucide.HardHat
            color="#5f5b66"
            size={28}
          />
        }
        title="No projects yet"
      />
    }
    contentContainerStyle={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    data={[]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    refreshControl={
      <RN.RefreshControl
        onRefresh={[MockFunction spy]}
        refreshing={false}
      />
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    updateCellsBatchingPeriod={50}
  />
</rn-View>
`;

exports[`ProjectsList > matches snapshot when loading 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-View
    onLayout={[Function]}
    style={
      {
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <rn-Pressable
      accessibilityLabel="Add project"
      accessibilityRole="button"
      onPress={[MockFunction spy]}
      testID="btn-new-project"
    >
      <rn-View
        className="flex-row items-center gap-3 rounded-lg border border-dashed border-border bg-surface-muted p-4"
      >
        <rn-View
          className="h-10 w-10 items-center justify-center rounded-md border border-border bg-card"
        >
          <lucide-Plus
            color="#2d3a5a"
            size={20}
          />
        </rn-View>
        <rn-View
          className="flex-1"
        >
          <rn-Text
            className="text-title-sm text-foreground"
          >
            Add project
          </rn-Text>
          <rn-Text
            className="text-sm text-muted-foreground"
          >
            Create a destination for field notes and reports.
          </rn-Text>
        </rn-View>
      </rn-View>
    </rn-Pressable>
  </rn-View>
  <rn-View
    style={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    testID="projects-list-skeleton"
  >
    <rn-View
      className="rounded-lg border border-border bg-card p-4 gap-3"
      onLayout={[Function]}
    >
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 18,
                "width": "60%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": 48,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 7,
                "height": 14,
                "width": 14,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 14,
                "width": "50%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": 12,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": "35%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
    </rn-View>
    <rn-View
      className="rounded-lg border border-border bg-card p-4 gap-3"
    >
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 18,
                "width": "60%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": 48,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 7,
                "height": 14,
                "width": 14,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 14,
                "width": "50%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": 12,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": "35%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
    </rn-View>
    <rn-View
      className="rounded-lg border border-border bg-card p-4 gap-3"
    >
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 18,
                "width": "60%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": 48,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 7,
                "height": 14,
                "width": 14,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 14,
                "width": "50%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
      <rn-View
        className="flex-row items-center gap-3"
      >
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": 12,
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
        <rn-View
          className="bg-muted"
          style={
            [
              {
                "borderRadius": 6,
                "height": 12,
                "width": "35%",
              },
              {
                "opacity": 0.35,
              },
              undefined,
            ]
          }
        />
      </rn-View>
    </rn-View>
  </rn-View>
</rn-View>
`;

exports[`ProjectsList > matches snapshot with projects 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-View
    onLayout={[Function]}
    style={
      {
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <rn-Pressable
      accessibilityLabel="Add project"
      accessibilityRole="button"
      onPress={[MockFunction spy]}
      testID="btn-new-project"
    >
      <rn-View
        className="flex-row items-center gap-3 rounded-lg border border-dashed border-border bg-surface-muted p-4"
      >
        <rn-View
          className="h-10 w-10 items-center justify-center rounded-md border border-border bg-card"
        >
          <lucide-Plus
            color="#2d3a5a"
            size={20}
          />
        </rn-View>
        <rn-View
          className="flex-1"
        >
          <rn-Text
            className="text-title-sm text-foreground"
          >
            Add project
          </rn-Text>
          <rn-Text
            className="text-sm text-muted-foreground"
          >
            Create a destination for field notes and reports.
          </rn-Text>
        </rn-View>
      </rn-View>
    </rn-Pressable>
  </rn-View>
  <rn-FlatList
    ListEmptyComponent={
      <EmptyState
        action={
          <Button
            accessibilityLabel="Add project"
            onPress={[MockFunction spy]}
            size="lg"
            testID="btn-new-project"
            variant="hero"
          >
            Add your first project
          </Button>
        }
        description="Create your first project so field notes and daily reports have a clear destination."
        icon={
          <lucide.HardHat
            color="#5f5b66"
            size={28}
          />
        }
        title="No projects yet"
      />
    }
    contentContainerStyle={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    data={
      [
        {
          "address": "123 Main St, San Francisco, CA",
          "name": "Construction Site A",
          "role": "owner",
          "slug": "prj_abc123",
          "updatedAt": "2024-03-15T10:30:00.000Z",
        },
        {
          "address": null,
          "name": "Office Building Renovation",
          "role": "editor",
          "slug": "prj_def456",
          "updatedAt": "2024-03-14T08:15:00.000Z",
        },
        {
          "address": "789 Oak Ave, Palo Alto, CA",
          "name": "Residential Complex",
          "role": "viewer",
          "slug": "prj_ghj789",
          "updatedAt": "2024-03-10T14:45:00.000Z",
        },
      ]
    }
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    refreshControl={
      <RN.RefreshControl
        onRefresh={[MockFunction spy]}
        refreshing={false}
      />
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    updateCellsBatchingPeriod={50}
  />
</rn-View>
`;

exports[`ProjectsList > renders EmptyState when no projects 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-FlatList
    ListEmptyComponent={
      <EmptyState
        action={
          <Button
            accessibilityLabel="Add project"
            onPress={[MockFunction spy]}
            size="lg"
            testID="btn-new-project"
            variant="hero"
          >
            Add your first project
          </Button>
        }
        description="Create your first project so field notes and daily reports have a clear destination."
        icon={
          <lucide.HardHat
            color="#5f5b66"
            size={28}
          />
        }
        title="No projects yet"
      />
    }
    contentContainerStyle={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    data={[]}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    refreshControl={
      <RN.RefreshControl
        onRefresh={[MockFunction spy]}
        refreshing={false}
      />
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    updateCellsBatchingPeriod={50}
  />
</rn-View>
`;

exports[`ProjectsList > renders address row only when address is non-null 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-View
    onLayout={[Function]}
    style={
      {
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <rn-Pressable
      accessibilityLabel="Add project"
      accessibilityRole="button"
      onPress={[MockFunction spy]}
      testID="btn-new-project"
    >
      <rn-View
        className="flex-row items-center gap-3 rounded-lg border border-dashed border-border bg-surface-muted p-4"
      >
        <rn-View
          className="h-10 w-10 items-center justify-center rounded-md border border-border bg-card"
        >
          <lucide-Plus
            color="#2d3a5a"
            size={20}
          />
        </rn-View>
        <rn-View
          className="flex-1"
        >
          <rn-Text
            className="text-title-sm text-foreground"
          >
            Add project
          </rn-Text>
          <rn-Text
            className="text-sm text-muted-foreground"
          >
            Create a destination for field notes and reports.
          </rn-Text>
        </rn-View>
      </rn-View>
    </rn-Pressable>
  </rn-View>
  <rn-FlatList
    ListEmptyComponent={
      <EmptyState
        action={
          <Button
            accessibilityLabel="Add project"
            onPress={[MockFunction spy]}
            size="lg"
            testID="btn-new-project"
            variant="hero"
          >
            Add your first project
          </Button>
        }
        description="Create your first project so field notes and daily reports have a clear destination."
        icon={
          <lucide.HardHat
            color="#5f5b66"
            size={28}
          />
        }
        title="No projects yet"
      />
    }
    contentContainerStyle={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    data={
      [
        {
          "address": "123 Main St, San Francisco, CA",
          "name": "Construction Site A",
          "role": "owner",
          "slug": "prj_abc123",
          "updatedAt": "2024-03-15T10:30:00.000Z",
        },
        {
          "address": null,
          "name": "Office Building Renovation",
          "role": "editor",
          "slug": "prj_def456",
          "updatedAt": "2024-03-14T08:15:00.000Z",
        },
        {
          "address": "789 Oak Ave, Palo Alto, CA",
          "name": "Residential Complex",
          "role": "viewer",
          "slug": "prj_ghj789",
          "updatedAt": "2024-03-10T14:45:00.000Z",
        },
      ]
    }
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    refreshControl={
      <RN.RefreshControl
        onRefresh={[MockFunction spy]}
        refreshing={false}
      />
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    updateCellsBatchingPeriod={50}
  />
</rn-View>
`;

exports[`ProjectsList > renders role labels correctly 1`] = `
<rn-View
  className="flex-1 bg-background"
  style={
    [
      {
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <rn-View
    className="px-5 py-4"
  >
    <rn-View
      className="gap-3"
    >
      <rn-View
        className="min-h-touch flex-row items-center gap-3"
      >
        <rn-Text
          className="min-w-0 flex-1 text-title-sm text-foreground"
          ellipsizeMode="tail"
          numberOfLines={1}
          testID="screen-header-title"
        >
          Projects
        </rn-Text>
        <rn-View
          className="shrink-0 flex-row items-center gap-2"
        />
      </rn-View>
    </rn-View>
  </rn-View>
  <rn-View
    onLayout={[Function]}
    style={
      {
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <rn-Pressable
      accessibilityLabel="Add project"
      accessibilityRole="button"
      onPress={[MockFunction spy]}
      testID="btn-new-project"
    >
      <rn-View
        className="flex-row items-center gap-3 rounded-lg border border-dashed border-border bg-surface-muted p-4"
      >
        <rn-View
          className="h-10 w-10 items-center justify-center rounded-md border border-border bg-card"
        >
          <lucide-Plus
            color="#2d3a5a"
            size={20}
          />
        </rn-View>
        <rn-View
          className="flex-1"
        >
          <rn-Text
            className="text-title-sm text-foreground"
          >
            Add project
          </rn-Text>
          <rn-Text
            className="text-sm text-muted-foreground"
          >
            Create a destination for field notes and reports.
          </rn-Text>
        </rn-View>
      </rn-View>
    </rn-Pressable>
  </rn-View>
  <rn-FlatList
    ListEmptyComponent={
      <EmptyState
        action={
          <Button
            accessibilityLabel="Add project"
            onPress={[MockFunction spy]}
            size="lg"
            testID="btn-new-project"
            variant="hero"
          >
            Add your first project
          </Button>
        }
        description="Create your first project so field notes and daily reports have a clear destination."
        icon={
          <lucide.HardHat
            color="#5f5b66"
            size={28}
          />
        }
        title="No projects yet"
      />
    }
    contentContainerStyle={
      {
        "gap": 12,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
    data={
      [
        {
          "address": "123 Main St, San Francisco, CA",
          "name": "Construction Site A",
          "role": "owner",
          "slug": "prj_abc123",
          "updatedAt": "2024-03-15T10:30:00.000Z",
        },
        {
          "address": null,
          "name": "Office Building Renovation",
          "role": "editor",
          "slug": "prj_def456",
          "updatedAt": "2024-03-14T08:15:00.000Z",
        },
        {
          "address": "789 Oak Ave, Palo Alto, CA",
          "name": "Residential Complex",
          "role": "viewer",
          "slug": "prj_ghj789",
          "updatedAt": "2024-03-10T14:45:00.000Z",
        },
      ]
    }
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    refreshControl={
      <RN.RefreshControl
        onRefresh={[MockFunction spy]}
        refreshing={false}
      />
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    updateCellsBatchingPeriod={50}
  />
</rn-View>
`;
